--- a/ACI/frontend.html
+++ b/ACI/frontend.html
@@ -501,9 +501,14 @@
 
           let procFolder = null;
           try {
-            const pr = data.processing_result?.content?.[0] && JSON.parse(data.processing_result.content[0].text);
-            procFolder = pr.processed_folder;
-          } catch {}
+            // The processing_result is an array of objects with a 'text' property containing a JSON string.
+            if (data.processing_result && data.processing_result[0] && data.processing_result[0].text) {
+              const pr = JSON.parse(data.processing_result[0].text);
+              procFolder = pr.processed_folder;
+            }
+          } catch (e) {
+            console.error("Error parsing processing_result:", e);
+          }
 
           // Always extract just the folder name (not full path)
           let folderName = procFolder ? procFolder.split('/').pop() : null;
